--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,55 @@
 
 <div class="row content">
   
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/2018.jpg)">
+  </div>
+  <div class="col-sm-6 content-excerpt">
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row content-date">
+          November 28
+        </div>
+        <div class="row content-title">
+          <h2> <a href="http://www.fernandameira.com/blog/post/four/ "> Webdesign trends for 2018 </a> </h2>
+        </div>
+        <div class="row content-summary">
+          <p>The year 2018 is just around the corner so I made a prediction of the next web design trends for 2018.</p>
+
+<p></p>
+          <a class="more-link" href="http://www.fernandameira.com/blog/post/four/ ">Read the post</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row content">
+  
+  <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/ux-ui.jpg)">
+  </div>
+  <div class="col-sm-6 content-excerpt">
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row content-date">
+          November 06
+        </div>
+        <div class="row content-title">
+          <h2> <a href="http://www.fernandameira.com/blog/post/third/ "> UX vs. UI </a> </h2>
+        </div>
+        <div class="row content-summary">
+          <p>It is very common to mix UI Design with UX Design, and even though the names are similar, their approaches are quite different.
+</p>
+          <a class="more-link" href="http://www.fernandameira.com/blog/post/third/ ">Read the post</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row content">
+  
   <div class="col-sm-6 content-image" style="background-image: url(img/portfolio/freelancer.jpg)">
   </div>
   <div class="col-sm-6 content-excerpt">
@@ -133,7 +182,7 @@
           <h2> <a href="http://www.fernandameira.com/blog/post/second/ "> My freelance experience </a> </h2>
         </div>
         <div class="row content-summary">
-          <p>I am a designer with over 10 years of experience and after working for years in advertising agencies and big companies like Jornal O Globo and L&rsquo;Óreal in Brazil. I decided to take the risk and start a web and graphic designer freelance career.
+          <p>I am a designer and after working for years in advertising agencies and big companies in Brazil. I decided to take the risk and start a freelance career.
 </p>
           <a class="more-link" href="http://www.fernandameira.com/blog/post/second/ ">Read the post</a>
         </div>
@@ -157,7 +206,7 @@
           <h2> <a href="http://www.fernandameira.com/blog/post/first/ "> Web Design vs. APP Design </a> </h2>
         </div>
         <div class="row content-summary">
-          <p>There are differences in designing for websites and applications, and this should totally influence your thinking and projects development.As both can be created using similar principles, the same tools and languages, we need to be carefull and don&rsquo;t mix the objectives of each one of them.
+          <p>There are differences in designing for websites and applications, and this should totally influence your thinking and projects development.
 </p>
           <a class="more-link" href="http://www.fernandameira.com/blog/post/first/ ">Read the post</a>
         </div>
